Added verified controller setup